fixing images not showing bug

--- a/resources/css/classic.css
+++ b/resources/css/classic.css
@@ -51,7 +51,7 @@ body {
   max-width: 42rem;
   margin: 0 auto;
   height: 50rem;
-  background-image: url(/assets/bg-triangle.svg);
+  background-image: url(assets/bg-triangle.svg);
   background-repeat: no-repeat;
   background-size: 70%;
   background-position: center 6rem;
@@ -81,19 +81,19 @@ section h2 {
 .scissors {
   top: 0;
   right: calc(50% - 21rem);
-  background-image: url(/assets/icon-scissors.svg);
+  background-image: url(assets/icon-scissors.svg);
   border-color: hsl(40, 84%, 53%);
 }
 .paper {
   top: 0;
   left: calc(0 - 6.5rem);
-  background-image: url(/assets/icon-paper.svg);
+  background-image: url(assets/icon-paper.svg);
   border-color: hsl(231, 91%, 66%);
 }
 .rock {
   top: 25rem;
   right: calc(35%);
-  background-image: url(/assets/icon-rock.svg);
+  background-image: url(assets/icon-rock.svg);
   border-color: hsl(350, 68%, 56%);
 }
 #openModal {
